rifinitura colonna sinistra con link

--- a/index.html
+++ b/index.html
@@ -33,13 +33,24 @@
       <!--/ header -->
       <!-- parte centrale -->
       <main>
+        <!-- colonna sinistre -->
         <div class=" colonna left">
-          <h2>title</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ai officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.pteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+          <div class="title-left">
+            <span><i class="fas fa-rss"></i></span>
+            <h3 class="title">Organic Themes</h3>
+          </div>
+          <ul class="menu-left">
+            <li> <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </a>
+            </li>
+            <li> <a href="#">Lorem ipsum dolor sit amet, cosint </a>
+            </li>
+            <li> <a href="#">Lorem ipsum dolor sit amet,  officia deserunt mollit anim id est laborum.</a>
+            </li>
+            <li> <a href="#">Lorem ipsum dolor sit amet,  officia deserunt mollit anim id est laborum.</a>
+            </li>
+          </ul>
         </div>
+        <!-- /colonna sinistra -->
         <div class=" colonna center">
           <h2>title</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
