--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
           </ul>
         </div>
         <!-- /colonna sinistra -->
+        <!-- colonna centrale -->
         <div class=" colonna center">
-          <h2>title</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h3>three Colimn</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+        <!-- /parte centrale  -->
         <div class="colonna right">
           <h2>title</h2>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do  sunt in culpa qui officia deserunt mollit anim id est laborum.
