--- a/index.html
+++ b/index.html
@@ -57,17 +57,24 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <!-- /parte centrale  -->
-        <div class="colonna right">
-          <h2>title</h2>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do  sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <!-- colonna destra -->
+        <div class="right">
           <div class="widget">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            <h2>The widget</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing e cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           <div class="widget">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed  in culpa qui officia deserunt mollit anim id est laborum.
+            <h2>The widget</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing e cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="widget">
+            <h2>The widget</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing e cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
+        <!-- /colonna destra -->
       </main>
+
 
 
       <footer>
