completamento footer con float invece di position absolute

--- a/index.html
+++ b/index.html
@@ -78,15 +78,29 @@
 
 
       <footer>
-        <p class ="produttore">Realizzazione Nino Chimento</p>
-        <div class="bottom">
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-github"></i>
-
+        <div class="footer-top">
+          Realizzazione Nino Chimento
+          <!-- <p class ="produttore">Realizzazione Nino Chimento</p> -->
         </div>
+
+        <div class="footer-bottom">
+          <div class="col-footer">
+            <i class="fab fa-facebook-square"></i>
+          </div>
+          <div class="col-footer">
+            <i class="fab fa-instagram"></i>
+          </div>
+          <div class="col-footer">
+            <i class="fab fa-github"></i>
+          </div>
+        </div>
+
       </footer>
     </div>
+
+
+
+
     <!-- /parte centrale -->
 
 
