accentramento immagine con nuovo logo

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <header>
         <div class="logo">
           <div class="natural">
-            NATURAL
+            <img src="img/natural-logo.png" alt="">
+            <h1>another beatiful organic theme</h1>
           </div>
-
         </div>
         <nav class="menu">
           <ul>
@@ -27,6 +27,9 @@
             <li><a href="#">contact</a></li>
           </ul>
         </nav>
+
+
+
 
 
       </header>
@@ -74,15 +77,12 @@
         </div>
         <!-- /colonna destra -->
       </main>
-
-
-
+      <!-- /chiusura main -->
+      <!-- footer -->
       <footer>
         <div class="footer-top">
           Realizzazione Nino Chimento
-          <!-- <p class ="produttore">Realizzazione Nino Chimento</p> -->
         </div>
-
         <div class="footer-bottom">
           <div class="col-footer">
             <i class="fab fa-facebook-square"></i>
@@ -94,9 +94,12 @@
             <i class="fab fa-github"></i>
           </div>
         </div>
-
       </footer>
+      <!--/ chiusura footer -->
     </div>
+
+
+
 
 
 
